# min-books

./: .editorconfig  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  MINBOOK-COMPLETION-REPORT.md  Makefile  README.en.md  README.ja.md  README.md  README.v2.md  package.json  pnpm-lock.yaml  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: release.yml
frontend/: .gitignore  eslint.config.mjs  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vitest.config.ts
frontend/e2e/: login.spec.ts  write-flow.spec.ts
frontend/messages/: en.json  ja.json  zh.json
frontend/src/: i18n.ts  middleware.ts
frontend/src/app/: globals.css  layout.tsx
frontend/src/app/(dashboard)/: layout.tsx  page.tsx
frontend/src/components/: providers.tsx
frontend/src/components/layout/: header.tsx  sidebar.tsx
frontend/src/components/ui/: alert.tsx  badge.tsx  button.tsx  card.tsx  dialog.tsx  input.tsx  progress.tsx  select.tsx  table.tsx  tabs.tsx  textarea.tsx
frontend/src/lib/: api.ts  sse.ts  utils.ts
frontend/src/lib/__tests__/: api.test.ts
frontend/tests/: e2e-report.md
infrastructure/: docker-compose.yml
infrastructure/nats/: nats.conf
infrastructure/nginx/: nginx.conf
infrastructure/otel/: collector.yaml
infrastructure/postgres/: Dockerfile
infrastructure/postgres/init/: 01-extensions.sql  02-schemas.sql  03-users.sql
infrastructure/redis/: redis.conf
infrastructure/tempo/: tempo.yaml
scripts/: e2e-manual-phaseE.sh  sign-and-curl.py  verify-deploy.sh  verify-v2.sh  verify-v3.sh
services/: Dockerfile.template
services/agent-planner/: Dockerfile  pyproject.toml
services/agent-planner/app/: config.py  main.py
services/agent-planner/prompts/: architect.j2  composer.j2  foundation_reviewer.j2  planner.j2
services/agent-planner/tests/: conftest.py  test_architect.py  test_composer.py  test_foundation_reviewer.py  test_invoke_e2e.py  test_registry.py
services/agent-reviewer/: Dockerfile  pyproject.toml
services/agent-reviewer/app/: config.py  main.py
services/agent-reviewer/prompts/: continuity_auditor.j2  observer.j2  radar.j2  reviser.j2
services/agent-reviewer/tests/: conftest.py  test_aigc_sensitive.py  test_continuity_auditor.py  test_invoke_e2e.py  test_observer.py  test_post_write_validator.py  test_radar.py  test_registry.py  test_reviser.py  test_settler.py  test_state_validator.py
services/agent-writer/: Dockerfile  pyproject.toml
services/agent-writer/app/: config.py  main.py
services/agent-writer/app/agents/: __init__.py  chapter_analyzer.py  consolidator.py  length_normalizer.py  polisher.py  short_fiction_writer.py  style_analyzer.py  writer.py
services/agent-writer/app/routes/: __init__.py  invoke.py
services/agent-writer/prompts/: chapter_analyzer.j2  length_normalizer.j2  polisher.j2  short_fiction_writer.j2  style_analyzer.j2  writer.j2
services/agent-writer/tests/: conftest.py  test_consolidator.py  test_invoke_e2e.py  test_length_normalizer.py  test_polisher.py  test_registry.py  test_style_analyzer.py  test_writer.py
services/book-service/: Dockerfile  alembic.ini  pyproject.toml
services/book-service/app/: config.py  db.py  main.py
services/book-service/app/routes/: books.py  chapters.py  exports.py  imports.py
services/book-service/migrations/: env.py
services/book-service/migrations/versions/: 0001_noop.py
services/gateway/: Dockerfile  pyproject.toml
services/gateway/app/: config.py  main.py
services/gateway/app/middleware/: __init__.py  i18n.py  rate_limit.py
services/gateway/app/routes/: __init__.py  agents.py  auth.py  books.py  config.py  cost.py  dlq.py  doctor.py  llm.py  notifications.py  pipeline.py  state.py  style.py  write_proxy.py
services/llm-gateway/: Dockerfile  pyproject.toml
services/llm-gateway/app/: cache.py  config.py  db.py  main.py
services/llm-gateway/app/providers/: __init__.py  anthropic_provider.py  base.py  ollama_provider.py  openai_compat.py  registry.py
services/llm-gateway/app/routes/: __init__.py  chat.py  cost.py  providers.py
services/llm-gateway/tests/: test_providers.py
services/notification-service/: Dockerfile  pyproject.toml
services/notification-service/app/: config.py  consumer.py  db.py  main.py
services/notification-service/app/channels/: __init__.py  base.py  feishu.py  telegram.py  webhook.py  wechat_work.py
services/notification-service/app/routes/: __init__.py  channels.py
services/pipeline-orchestrator/: Dockerfile  pyproject.toml
services/pipeline-orchestrator/app/: config.py  db.py  main.py  state.py
services/pipeline-orchestrator/pipeline_definitions/: chapter_writing_v2.yaml
services/pipeline-orchestrator/tests/: __init__.py  test_classifier.py  test_dag.py  test_e2e_dlq.py  test_e2e_pipeline.py
services/state-service/: Dockerfile  alembic.ini  pyproject.toml
services/state-service/app/: config.py  db.py  main.py
services/state-service/app/routes/: __init__.py  config.py  memory.py  snapshots.py  truth.py
services/state-service/migrations/: env.py
services/state-service/migrations/versions/: 0001_initial_schemas.py
shared/minbook_common/: pyproject.toml
shared/minbook_common/minbook_common/: __init__.py  auth.py  config.py  http_client.py  nats_client.py
shared/minbook_common/minbook_common/agents/: __init__.py  base.py  context.py  prompt_loader.py  registration.py  registry.py
shared/minbook_common/minbook_common/clients/: __init__.py  llm_client.py  memory_client.py  state_client.py
shared/minbook_common/minbook_common/middleware/: __init__.py  audit.py  auth.py  internal_auth.py
shared/minbook_common/minbook_common/models/: __init__.py  agent_card.py  book.py  chapter.py  event.py  llm.py  pipeline.py  state.py
shared/minbook_db/: pyproject.toml
shared/minbook_db/minbook_db/: __init__.py  base.py  session.py
shared/minbook_otel/: pyproject.toml
shared/minbook_otel/minbook_otel/: __init__.py  llm_span.py  logging.py  tracing.py
skills/: SKILL.md
tests/: conftest.py  test_e2e.py
(+57 files in other folders)
