[project]
name = "minbook-monorepo"
version = "0.1.0"
description = "MinBook 多智能体小说写作系统"
requires-python = ">=3.11,<3.13"

[tool.uv.workspace]
members = [
    "services/*",
    "shared/*",
]

[tool.uv.sources]
minbook-common = { workspace = true }
minbook-db = { workspace = true }
minbook-otel = { workspace = true }

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "UP", # pyupgrade
    "N",  # pep8-naming
]
ignore = [
    "E501",  # line too long(交给 formatter)
    "B008",  # function call in default argument
]

[tool.ruff.lint.isort]
known-first-party = ["minbook_common", "minbook_db", "minbook_otel", "app"]

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
check_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"
