[project]
name = "minbook-book-service"
version = "0.1.0"
description = "MinBook Book Service (CRUD for shared.books, chapters, settings, imports/exports)"
requires-python = ">=3.11,<3.13"
dependencies = [
    "minbook-common",
    "minbook-db",
    "minbook-otel",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "pydantic>=2.5",
    "python-multipart>=0.0.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "ruff>=0.3",
    "mypy>=1.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
pythonpath = ["."]
