[project]
name = "minbook-notification-service"
version = "0.1.0"
description = "MinBook Notification Service (Telegram / Feishu / Wecom / email)"
requires-python = ">=3.11,<3.13"
dependencies = [
    "minbook-common",
    "minbook-db",
    "minbook-otel",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "jinja2>=3.1",  # notification template rendering
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "respx>=0.21",
    "ruff>=0.3",
    "mypy>=1.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
