[project]
name = "minbook-state-service"
version = "0.1.0"
description = "MinBook State Service (truth files, chapter data, migration owner)"
requires-python = ">=3.11,<3.13"
dependencies = [
    "minbook-common",
    "minbook-db",
    "minbook-otel",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "pgvector>=0.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "ruff>=0.3",
    "mypy>=1.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
