[project]
name = "minbook-common"
version = "0.1.0"
description = "MinBook 共享 Pydantic 模型和工具"
requires-python = ">=3.11,<3.13"
dependencies = [
    "pydantic>=2.5",
    "pydantic-settings>=2.1",
    "httpx>=0.27",
    "python-jose[cryptography]>=3.3",
    "nats-py>=2.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["minbook_common"]
