[project]
name = "minbook-otel"
version = "0.1.0"
description = "MinBook 共享 OpenTelemetry 初始化 + LLM span"
requires-python = ">=3.11,<3.13"
dependencies = [
    "opentelemetry-api>=1.25",
    "opentelemetry-sdk>=1.25",
    "opentelemetry-exporter-otlp>=1.25",
    "opentelemetry-instrumentation-fastapi>=0.46b0",
    "opentelemetry-instrumentation-httpx>=0.46b0",
    "opentelemetry-instrumentation-sqlalchemy>=0.46b0",
    "opentelemetry-instrumentation-asyncpg>=0.46b0",
    "opentelemetry-instrumentation-logging>=0.46b0",
    "opentelemetry-instrumentation-system-metrics>=0.46b0",
    "structlog>=24.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["minbook_otel"]
